--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,6 +300,7 @@ h1, h2, h3, h4, h5, h6 {
   visibility: hidden;
   border-radius: 10px;
   padding: 10px 0;
+  height: fit-content;
 }
 
 .mobile-nav * {
