--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -258,7 +258,7 @@
     .products-list{
         height: 100px;
         flex-direction: row;
-        overflow-x: auto !important;
+        overflow-x: scroll !important;
         overflow-y: hidden !important;
     }
     #header .get-started-btn{
@@ -299,7 +299,7 @@
         width: unset;
     }
     .menu .btn{
-        padding: 0.3rem 0.6rem;
+        padding: 0.5rem 0.6rem;
         margin: 0px;
         margin-left: 0.3rem;
         text-align: center;
@@ -351,6 +351,7 @@
     .other-info{
         padding: 5px 0 !important;
         background: #37517e;
+        height: fit-content;
     }
 }
 
