--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -298,6 +298,9 @@
         margin: 0px;
         width: unset;
     }
+    .itemlist{
+        height:fit-content;
+    }
     .menu .btn{
         padding: 0.5rem 0.6rem;
         margin: 0px;
