--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,10 +268,10 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Mobile Navigation */
 .mobile-nav-toggle {
-  position: fixed;
+  /* position: fixed;
   top: 20px;
   right: 15px;
-  z-index: 9998;
+  z-index: 9998; */
   border: 0;
   background: none;
   font-size: 24px;
